--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html lang="zh">
   <head>
     <title>FX网页裁剪</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style type="text/css">
       body {
         margin: 10px;
