--- a/popup.html
+++ b/popup.html
@@ -31,6 +31,7 @@
         align-items: center;
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
       }
     </style>
 
@@ -58,6 +59,15 @@
           <li>6、操作完成以后，按键盘上的「P」键，停止编辑；</li>
           <li>7、继续编辑，按键盘上的「A」键；</li>
           <li>8、导出网页成PDF，鼠标右键-->打印，或快捷键：先按 Ctrl 再按 P；</li>
+        </ul>
+      </div>
+      <div>
+        <button id="_fullscreen">设置图片全屏</button>
+        <ul>
+          提示：
+          <li>1、“设置图片全屏”是为了打印或导出「图片」为PDF时，图片占满整个PDF，不会有白边；</li>
+          <li>2、如果导出PDF预览时，依然有“白边”，可以在预览右侧的“更多设置”里将「边距」设为“无”；</li>
+          <li>3、使用方法：将任意图片拖放到浏览器里--->点击按钮“设置图片全屏”--->打印；</li>
         </ul>
       </div>
     </div>
