新增：1、软删除元素；2、可撤回软删除的元素；3、新特性：背景色、100%宽度；

--- a/popup.html
+++ b/popup.html
@@ -78,11 +78,15 @@
           <li>1、滚动到页面底部，保证所有的图片、视频、文字都正常显示；</li>
           <li>2、点击「开启编辑网页」按钮，注入脚本；</li>
           <li>3、在网页的空白处点击一下；</li>
-          <li>4、然后鼠标在网页的内容间来回滑动，会出现<em>橙色</em>的边框；</li>
-          <li>5、按键盘上的「回退键」或「删除键」，即可删除带有<em>橙色</em>边框的内容；</li>
-          <li>6、操作完成以后，按键盘上的「P」键，停止编辑；</li>
-          <li>7、继续编辑，按键盘上的「A」键；</li>
-          <li>8、导出网页成PDF，鼠标右键-->打印，或快捷键：先按 Ctrl 再按 P；</li>
+          <li>4、然后鼠标在网页的内容间来回滑动，会出现<em>橙色</em>的边框，即表明选中<em>该内容</em>；</li>
+          <li>5、<em>Q键</em>：隐藏<em>该内容</em>；</li>
+          <li>6、<em>Z键</em>：撤销隐藏<em>上个内容</em>；</li>
+          <li>7、<em>W键</em>：设置<em>该内容</em>宽度100%（不可撤回）；</li>
+          <li>8、<em>E键</em>：去除<em>该内容</em>背景（不可撤回）；</li>
+          <li>9、<em>P键</em>：暂停编辑；</li>
+          <li>10、<em>A键</em>：继续编辑；</li>
+          <li>11、<em>Del键</em>：永久删除<em>该内容</em>（不可撤回）；</li>
+          <li>12、导出网页成PDF，鼠标右键-->打印，或快捷键：先按 Ctrl 再按 P；</li>
         </ul>
       </div>
       <div>
